ADD: Jasper reports

--- a/src/main/resources/report/Tranactions-report.jrxml
+++ b/src/main/resources/report/Tranactions-report.jrxml
@@ -1,107 +1,70 @@
-<!-- Created with Jaspersoft Studio version 7.0.3.final using JasperReports Library version 7.0.3-41034ca841d452f3305ba55b9042260aaa1ab5dd  -->
-<jasperReport name="Tranactions-report" language="java" columnCount="1" pageWidth="992" pageHeight="502" orientation="Landscape" columnWidth="952" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="50f35e50-30fa-4af6-800d-22d00470f438">
-	<property name="com.jaspersoft.studio.unit." value="pixel"/>
-	<property name="com.jaspersoft.studio.unit.pageHeight" value="pixel"/>
-	<property name="com.jaspersoft.studio.unit.topMargin" value="pixel"/>
-	<property name="com.jaspersoft.studio.unit.bottomMargin" value="pixel"/>
-	<property name="com.jaspersoft.studio.unit.leftMargin" value="pixel"/>
-	<property name="com.jaspersoft.studio.unit.rightMargin" value="pixel"/>
-	<property name="com.jaspersoft.studio.unit.columnWidth" value="pixel"/>
-	<property name="com.jaspersoft.studio.unit.columnSpacing" value="pixel"/>
-	<query language="sql"><![CDATA[]]></query>
-	<field name="clientName" class="java.lang.String"/>
-	<field name="accountNumber" class="java.lang.String"/>
-	<field name="accountType" class="java.lang.String"/>
-	<field name="initialBalance" class="java.lang.Double"/>
-	<field name="state" class="java.lang.Boolean"/>
-	<field name="transactionAmount" class="java.lang.Double"/>
-	<field name="balance" class="java.lang.Double"/>
-	<field name="createDate" class="java.util.Date"/>
-	<background splitType="Stretch"/>
-	<title height="79" splitType="Stretch">
-		<element kind="staticText" uuid="480d90ea-94c5-41b7-b2c6-69ab8f5096ae" positionType="FixRelativeToBottom" x="0" y="0" width="952" height="79" hTextAlign="Center">
-			<text><![CDATA[Transactions reports devsu technical test]]></text>
-			<property name="com.jaspersoft.studio.unit.x" value="pixel"/>
-		</element>
-		<property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.HorizontalRowLayout"/>
-	</title>
-	<pageHeader height="35" splitType="Stretch">
-		<property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.HorizontalRowLayout"/>
-	</pageHeader>
-	<columnHeader height="61" splitType="Stretch">
-		<element kind="staticText" uuid="d0736fdb-e4ee-4d59-89e3-1c6abcd110b3" x="0" y="0" width="119" height="61">
-			<text><![CDATA[clientName]]></text>
-			<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="2abc42a0-b4e9-45f3-a32d-733e23553532"/>
-		</element>
-		<element kind="staticText" uuid="81aff46b-1689-4da9-8b28-3d3e0a666775" x="119" y="0" width="119" height="61">
-			<text><![CDATA[clientName]]></text>
-			<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="bc290f29-e37e-4cb8-9782-01f9edd14730"/>
-		</element>
-		<element kind="staticText" uuid="c2336029-82d7-4953-9b98-5d41dc72ec44" x="238" y="0" width="119" height="61">
-			<text><![CDATA[accountType]]></text>
-			<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="931a5830-f0f2-422a-aaf9-8eca3981e1e9"/>
-		</element>
-		<element kind="staticText" uuid="8262ff4e-d649-40a4-9cfe-bb47da9171cd" x="357" y="0" width="119" height="61">
-			<text><![CDATA[initialBalance]]></text>
-			<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="d4fd7264-8cc0-48b7-bb7e-0b02c1d0c2cc"/>
-		</element>
-		<element kind="staticText" uuid="f6b9bb07-07da-43ff-8b94-dd4d9f22d7f5" x="476" y="0" width="119" height="61">
-			<text><![CDATA[state]]></text>
-			<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="cadf1027-c841-4b43-96b2-0ac6057d4da0"/>
-		</element>
-		<element kind="staticText" uuid="f0910f83-c611-47ce-b02c-413b74ee09e7" x="595" y="0" width="119" height="61">
-			<text><![CDATA[transactionAmount]]></text>
-			<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="3f16dba0-f768-4f11-8a6b-febb1a0e1452"/>
-		</element>
-		<element kind="staticText" uuid="92000b70-9e96-4f32-a0e9-4fd38eb58b66" x="714" y="0" width="119" height="61">
-			<text><![CDATA[balance]]></text>
-			<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="5a980a0d-d94b-43dd-ba8e-4190303adc9b"/>
-		</element>
-		<element kind="staticText" uuid="e576ad9b-e17f-43df-9401-4f436e90e920" x="833" y="0" width="119" height="61">
-			<text><![CDATA[createDate]]></text>
-			<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="8ef52dae-e5c2-445d-9d0e-0e3ac7155b06"/>
-		</element>
-		<property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.HorizontalRowLayout"/>
-	</columnHeader>
-	<detail>
-		<band height="139" splitType="Stretch">
-			<element kind="textField" uuid="8041be5b-7cab-44f1-bbd5-d173a6943f21" x="0" y="0" width="119" height="139">
-				<expression><![CDATA[$F{clientName}]]></expression>
-				<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="bc290f29-e37e-4cb8-9782-01f9edd14730"/>
-			</element>
-			<element kind="textField" uuid="1d83777a-09f2-4995-905c-cfdec75952bb" x="119" y="0" width="119" height="139" linkTarget="Self">
-				<expression><![CDATA[$F{clientName}]]></expression>
-				<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="2abc42a0-b4e9-45f3-a32d-733e23553532"/>
-			</element>
-			<element kind="textField" uuid="e60d75b0-b25d-4a37-aeb0-dabbe35fe76c" x="238" y="0" width="119" height="139">
-				<expression><![CDATA[$F{accountType}]]></expression>
-				<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="931a5830-f0f2-422a-aaf9-8eca3981e1e9"/>
-			</element>
-			<element kind="textField" uuid="2b381a7a-3fc2-438a-bcf8-0fff9264c936" x="357" y="0" width="119" height="139">
-				<expression><![CDATA[$F{initialBalance}]]></expression>
-				<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="d4fd7264-8cc0-48b7-bb7e-0b02c1d0c2cc"/>
-			</element>
-			<element kind="textField" uuid="3b9acd54-6d4d-4062-a2a8-a1b44e92e62b" x="476" y="0" width="119" height="139">
-				<expression><![CDATA[$F{state}]]></expression>
-				<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="cadf1027-c841-4b43-96b2-0ac6057d4da0"/>
-			</element>
-			<element kind="textField" uuid="6b1e1202-6e98-4aaa-97a9-66bbffbf9b83" x="595" y="0" width="119" height="139">
-				<expression><![CDATA[$F{transactionAmount}]]></expression>
-				<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="3f16dba0-f768-4f11-8a6b-febb1a0e1452"/>
-				<property name="com.jaspersoft.studio.unit.width" value="px"/>
-			</element>
-			<element kind="textField" uuid="03997a36-2ce3-4bf5-9ca0-461cfbdbd7d6" x="714" y="0" width="119" height="139" linkType="None" linkTarget="Self">
-				<expression><![CDATA[$F{balance}]]></expression>
-				<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="5a980a0d-d94b-43dd-ba8e-4190303adc9b"/>
-			</element>
-			<element kind="textField" uuid="8aca4240-e1a5-49b9-887c-1e10c72cad4d" x="833" y="0" width="119" height="139">
-				<expression><![CDATA[$F{createDate}]]></expression>
-				<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="8ef52dae-e5c2-445d-9d0e-0e3ac7155b06"/>
-			</element>
-			<property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.HorizontalRowLayout"/>
-		</band>
-	</detail>
-	<columnFooter height="45" splitType="Stretch"/>
-	<pageFooter height="54" splitType="Stretch"/>
-	<summary height="42" splitType="Stretch"/>
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE jasperReport PUBLIC "-//JasperReports//DTD Report Design//EN"
+        "http://jasperreports.sourceforge.net/dtds/jasperreport.dtd">
+
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports"
+              xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+              xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd"
+              name="TransactionAuditReport"
+              pageWidth="842"
+              pageHeight="595"
+              columnWidth="802"
+              leftMargin="20"
+              rightMargin="20"
+              topMargin="20"
+              bottomMargin="20"
+              uuid="11111111-2222-3333-4444-555555555555">
+
+    <!-- Campos -->
+    <field name="idTransaction" class="java.lang.Long"/>
+    <field name="createDate" class="java.time.LocalDateTime"/>
+    <field name="clientName" class="java.lang.String"/>
+    <field name="accountNumber" class="java.lang.String"/>
+    <field name="transactionType" class="java.lang.String"/>
+    <field name="initialBalance" class="java.lang.Double"/>
+    <field name="status" class="java.lang.Boolean"/>
+    <field name="transactionAmount" class="java.lang.Double"/>
+    <field name="balance" class="java.lang.Double"/>
+
+    <!-- Título -->
+    <title>
+        <band height="50">
+            <staticText>
+                <reportElement x="0" y="10" width="802" height="30"/>
+                <textElement textAlignment="Center" verticalAlignment="Middle">
+                    <font size="16" isBold="true"/>
+                </textElement>
+                <text><![CDATA[Reporte de Transacciones Auditadas Devsu]]></text>
+            </staticText>
+        </band>
+    </title>
+
+    <!-- Encabezado columnas -->
+    <columnHeader>
+        <band height="20">
+            <staticText><reportElement x="0"   y="0" width="60"  height="20"/><textElement textAlignment="Center"/><text><![CDATA[ID]]></text></staticText>
+            <staticText><reportElement x="60"  y="0" width="100" height="20"/><textElement textAlignment="Center"/><text><![CDATA[Fecha]]></text></staticText>
+            <staticText><reportElement x="160" y="0" width="120" height="20"/><textElement textAlignment="Left"/><text><![CDATA[Cliente]]></text></staticText>
+            <staticText><reportElement x="280" y="0" width="120" height="20"/><textElement textAlignment="Left"/><text><![CDATA[Nro Cuenta]]></text></staticText>
+            <staticText><reportElement x="400" y="0" width="100" height="20"/><textElement textAlignment="Right"/><text><![CDATA[Monto]]></text></staticText>
+            <staticText><reportElement x="500" y="0" width="100" height="20"/><textElement textAlignment="Right"/><text><![CDATA[Saldo Inicial]]></text></staticText>
+            <staticText><reportElement x="600" y="0" width="80"  height="20"/><textElement textAlignment="Center"/><text><![CDATA[Estado]]></text></staticText>
+            <staticText><reportElement x="680" y="0" width="120" height="20"/><textElement textAlignment="Right"/><text><![CDATA[Saldo]]></text></staticText>
+        </band>
+    </columnHeader>
+
+    <!-- Detalle -->
+    <detail>
+        <band height="20">
+            <textField><reportElement x="0"   y="0" width="60"  height="20"/><textElement textAlignment="Center"/><textFieldExpression><![CDATA[$F{idTransaction}]]></textFieldExpression></textField>
+            <textField><reportElement x="60"  y="0" width="100" height="20"/><textElement textAlignment="Center"/><textFieldExpression><![CDATA[$F{createDate}]]></textFieldExpression></textField>
+            <textField><reportElement x="160" y="0" width="120" height="20"/><textElement textAlignment="Left"/><textFieldExpression><![CDATA[$F{clientName}]]></textFieldExpression></textField>
+            <textField><reportElement x="280" y="0" width="120" height="20"/><textElement textAlignment="Left"/><textFieldExpression><![CDATA[$F{accountNumber}]]></textFieldExpression></textField>
+            <textField><reportElement x="400" y="0" width="100" height="20"/><textElement textAlignment="Right"/><textFieldExpression><![CDATA[$F{transactionAmount}]]></textFieldExpression></textField>
+            <textField><reportElement x="500" y="0" width="100" height="20"/><textElement textAlignment="Right"/><textFieldExpression><![CDATA[$F{initialBalance}]]></textFieldExpression></textField>
+            <textField><reportElement x="600" y="0" width="80"  height="20"/><textElement textAlignment="Center"/><textFieldExpression><![CDATA[$F{status}]]></textFieldExpression></textField>
+            <textField><reportElement x="680" y="0" width="120" height="20"/><textElement textAlignment="Right"/><textFieldExpression><![CDATA[$F{balance}]]></textFieldExpression></textField>
+        </band>
+    </detail>
+
 </jasperReport>
